--- a/Server/.env
+++ b/Server/.env
@@ -1,4 +1,4 @@
-mongoDbUri = "mongodb+srv://A_RicemusicEspc:A_RicemusicEspc123@cluster0.s9ibflx.mongodb.net/?retryWrites=true&w=majority"
+mongoDbUri = "mongodb+srv://"
 PORTNUMBER = 3000
 routesDirs = './routes'
 modelsDirs = './models'
